--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.11",
     "node-schedule": "^1.3.2",
     "s3-client": "^4.4.2",
+    "s003-client": "^4.4.2",
     "superagent": "^5.0.5"
   },
   "engines": {
